--- a/Coeficientes/0_Formatar_BD.ipynb
+++ b/Coeficientes/0_Formatar_BD.ipynb
@@ -540,7 +540,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('Aneel')",
+   "display_name": "Aneel",
    "language": "python",
    "name": "python3"
   },
@@ -554,11 +554,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4d28970a05ddb4de629ebf8a86150f97e64b78d521ffe1b886d85a40cf60df4e"
+    "hash": "480ca3e66d53f790d71f23a4e6fd5a0fb225c2e8e74302bbec1a2934ab7c2802"
    }
   }
  },
