--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diretório criado: C:\\Users\\viniciusbarros\\Documents\\Previsor\\Checar_Rapeel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Calcular_Previsao import calcular_previsao\n",
     "from download_DB import download_db\n",
@@ -106,7 +98,7 @@
     "                print(f\"Arquivo exportado: {previsor_detalhe}\\n\\n\")            \n",
     "\n",
     "    if opcao_menu == 2:\n",
-    "        directory = download_db(download_path,force_download=True, lista_download=[\"skate_ug\" ,\"skate_usinas\",\"leilao\"])\n",
+    "        directory = download_db(download_path,force_download=True)\n",
     "\n",
     "    if opcao_menu == 3:\n",
     "        global biu\n",
@@ -118,51 +110,7 @@
     "        checar_Rapeel(biu_file_path, directory, inicio_biu,checar_rapeel_path)\n",
     "    return opcao_menu\n",
     "\n",
-    "create_previsor_folders()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Escolha uma opção:\n",
-      "0) - Sair\n",
-      "1) - Calcular previsão da base de dados\n",
-      "2) - Atualizar base de dados\n",
-      "3) - Checar Rapeel\n",
-      "Data do início do BIU:\n",
-      "Selecione o arquivo do BIU\n",
-      "Carregando arquivo de log...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\viniciusbarros\\OneDrive - unb.br\\0Aneel\\Previsor\\App\\download_DB.py:12: DeprecationWarning:invalid escape sequence '\\S'\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './Queries/rapeel.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\viniciusbarros\\OneDrive - unb.br\\0Aneel\\Previsor\\App\\Previsor_teste.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     opcao_menu \u001b[39m=\u001b[39m menu_principal()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mif\u001b[39;00m opcao_menu \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\viniciusbarros\\OneDrive - unb.br\\0Aneel\\Previsor\\App\\Previsor_teste.ipynb Cell 2\u001b[0m in \u001b[0;36mmenu_principal\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=97'>98</a>\u001b[0m inicio_biu \u001b[39m=\u001b[39m get_date()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=98'>99</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSelecione o arquivo do BIU\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=99'>100</a>\u001b[0m directory \u001b[39m=\u001b[39m download_db(download_path,force_download\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, lista_download\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mrapeel\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mskate_ug\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mskate_usinas\u001b[39;49m\u001b[39m\"\u001b[39;49m])        \n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m biu_file_path \u001b[39m=\u001b[39m get_biu()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/viniciusbarros/OneDrive%20-%20unb.br/0Aneel/Previsor/App/Previsor_teste.ipynb#W1sZmlsZQ%3D%3D?line=101'>102</a>\u001b[0m checar_Rapeel(biu_file_path, directory, inicio_biu,checar_rapeel_path)\n",
-      "File \u001b[1;32mc:\\Users\\viniciusbarros\\OneDrive - unb.br\\0Aneel\\Previsor\\App\\download_DB.py:58\u001b[0m, in \u001b[0;36mdownload_db\u001b[1;34m(download_path, queries_path, lista_download, data, force_download)\u001b[0m\n\u001b[0;32m     56\u001b[0m file_path \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdirectory\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mdb_name\u001b[39m}\u001b[39;00m\u001b[39m.gzip\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     57\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(file_path)) \u001b[39mor\u001b[39;00m force_download:\n\u001b[1;32m---> 58\u001b[0m     query \u001b[39m=\u001b[39m  read_file(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(queries_path,\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m{\u001b[39;49;00mdb_name\u001b[39m}\u001b[39;49;00m\u001b[39m.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[0;32m     59\u001b[0m     db \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_sql_query(query,skate_engine)\n\u001b[0;32m     60\u001b[0m     log[db_name] \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mnow()\u001b[39m.\u001b[39mstrftime(\u001b[39m\"\u001b[39m\u001b[39mDia: \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm/\u001b[39m\u001b[39m%\u001b[39m\u001b[39my - Horário: \u001b[39m\u001b[39m%\u001b[39m\u001b[39mH:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mM:\u001b[39m\u001b[39m%\u001b[39m\u001b[39mS\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\viniciusbarros\\OneDrive - unb.br\\0Aneel\\Previsor\\App\\utils.py:52\u001b[0m, in \u001b[0;36mread_file\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mread_file\u001b[39m(path: \u001b[39mstr\u001b[39m):\n\u001b[0;32m     51\u001b[0m     \u001b[39m# Lê arquivo\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m     53\u001b[0m         lines \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(f\u001b[39m.\u001b[39mreadlines())\n\u001b[0;32m     54\u001b[0m     \u001b[39mreturn\u001b[39;00m lines\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './Queries/rapeel.txt'"
-     ]
-    }
-   ],
-   "source": [
+    "create_previsor_folders()\n",
     "while(True):\n",
     "    opcao_menu = menu_principal()\n",
     "    if opcao_menu == 0:\n",
@@ -174,7 +122,7 @@
   "kernelspec": {
    "display_name": "Aneel",
    "language": "python",
-   "name": "python3"
+   "name": "aneel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
