--- a/Coeficientes/0_Formatar_BD.ipynb
+++ b/Coeficientes/0_Formatar_BD.ipynb
@@ -90,7 +90,7 @@
     "    ug+= lista\n",
     "    return (sorted(ug))\n",
     "\n",
-    "with open(\"bdworgs_ugs.txt\",\"w\") as f:\n",
+    "with open(\"./Outputs/bdworgs_ugs_mudancas.txt\",\"w\") as f:\n",
     "    for i,ug in enumerate(ugs):\n",
     "        ug_corr = corrige_ug(ug)\n",
     "        f.write(f\"{ug} => {ug_corr}\\n\")\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "8beaff2c",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
