--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -54,10 +54,8 @@
     "def calc_previsao():\n",
     "    # Calcula previsão\n",
     "    global result, skate_merged\n",
-    "    print(\"\\n\" + \" Baixando arquivos \".center(60, \"*\") + \"\\n\")\n",
     "    directory = download_db(download_path, lista_download=[\n",
     "                            \"skate_leilao\", \"skate_ug\", \"skate_usinas\"])\n",
-    "    print(\"\\n\" + \"*\".center(60, \"*\") + \"\\n\")\n",
     "    result, skate_merged = calcular_previsao(directory)\n",
     "    skate_export = skate_merged[['NomUsina', 'IdeUsinaOutorga', 'NumUgUsina', 'SigTipoGeracao',\n",
     "                                 'Previsao_OC', 'Dat_OC_obrigacao', 'DatMonitoramento', 'FaseAtual', 'Indicador']].copy()\n",
@@ -73,6 +71,7 @@
     "\n",
     "\n",
     "def menu_principal():\n",
+    "    clear_console()\n",
     "    # Apresenta menu principal\n",
     "    global skate_merged, skate_export\n",
     "    global result, df\n",
@@ -85,6 +84,11 @@
     "    }\n",
     "    show_options(dict_menu_principal)\n",
     "    opcao_menu = get_num(dict_menu_principal)\n",
+    "\n",
+    "    clear_console()\n",
+    "    print(dict_menu_principal[opcao_menu])\n",
+    "    print(\"\\n\")\n",
+    "\n",
     "    if opcao_menu == 0:\n",
     "        print(\"Sessão terminada.\")\n",
     "        return 0\n",
@@ -94,20 +98,20 @@
     "        print(\"Calculando previsão...\")\n",
     "        result, skate_export = calc_previsao()\n",
     "        if result == \"Ok\":\n",
-    "            minutos_estimado = ((2901 / psutil.cpu_freq().max)\n",
-    "                                * (skate_export.shape[0] / 50_000) * 24)/60\n",
+    "            segundos_estimado = ((2901 / psutil.cpu_freq().max)\n",
+    "                                * (skate_export.shape[0] / 50_000) * 24)\n",
     "            print(\n",
-    "                f\"Exportando arquivo com previsões... Previsão: {minutos_estimado:.2f} minutos.\")\n",
+    "                f\"Exportando arquivo com previsões... Previsão: {segundos_estimado:.0f} segundos.\")\n",
     "            previsao_file = os.path.join(\n",
     "                previsoes_path, f\"Previsao_OC_{hoje_str}.xlsx\")\n",
     "            previsor_detalhe = os.path.join(\n",
     "                previsoes_path, f\"Previsao_OC_detalhada_{hoje_str}.xlsx\")\n",
     "            skate_export.to_excel(previsao_file, index=False)\n",
     "            print(f\"Arquivo exportado: {previsao_file}\\n\")\n",
-    "            minutos_estimado = ((2901 / psutil.cpu_freq().max)\n",
-    "                                * (skate_merged.shape[0] / 50_000) * 120)/60\n",
+    "            segundos_estimado = ((2901 / psutil.cpu_freq().max)\n",
+    "                                * (skate_merged.shape[0] / 50_000) * 120)\n",
     "            print(\n",
-    "                f\"Deseja exportar arquivo detalahado? Previsão: {minutos_estimado:.2f} minutos.\\n\")\n",
+    "                f\"Deseja exportar arquivo detalahado? Previsão: {segundos_estimado:.0f} segundos.\\n\")\n",
     "\n",
     "            options = {\n",
     "                0: \"Não\",\n",
@@ -120,6 +124,7 @@
     "                print(\"Exportando arquivo de previsão detalhado...\")\n",
     "                skate_merged.to_excel(previsor_detalhe, index=False)\n",
     "                print(f\"Arquivo exportado: {previsor_detalhe}\\n\\n\")\n",
+    "            perguntar_abrir_pasta(previsoes_path)\n",
     "\n",
     "    if opcao_menu == 2:\n",
     "        directory = download_db(download_path, force_download=True, lista_download=[\n",
@@ -129,11 +134,13 @@
     "        global biu\n",
     "        print(\"Data do início do BIU:\")\n",
     "        inicio_biu = get_date()\n",
-    "        print(\"Selecione o arquivo do BIU\")\n",
+    "        print(\"Selecione o arquivo do BIU\\n\")\n",
+    "        biu_file_path = get_biu()\n",
     "        directory = download_db(download_path, force_download=False, lista_download=[\n",
     "                                \"rapeel\", \"skate_ug\", \"skate_usinas\"])\n",
-    "        biu_file_path = get_biu()\n",
+    "        \n",
     "        checar_Rapeel(biu_file_path, directory, inicio_biu, checar_rapeel_path)\n",
+    "        _ = input(\"Aperte enter para retornar ao menu.\")\n",
     "    return opcao_menu\n",
     "\n",
     "clear_console()\n",
@@ -149,7 +156,7 @@
   "kernelspec": {
    "display_name": "Aneel",
    "language": "python",
-   "name": "python3"
+   "name": "aneel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -161,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
