--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -25,7 +25,7 @@
   "kernelspec": {
    "display_name": "Aneel",
    "language": "python",
-   "name": "python3"
+   "name": "aneel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -37,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
