--- a/App/Previsor_teste2.ipynb
+++ b/App/Previsor_teste2.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory was changed to: C:\\Users\\viniciusbarros\\Documents\\GitHub\\Previsor\\App\n"
+      "Current working directory was changed to: C:\\Users\\Vinicius\\Documents\\GitHub\\Previsor\\App\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,38 +115,363 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "monitoramento_ug = pd.read_parquet(os.path.join(directory,\"vmonitoramentoug.gzip\"))"
+    "cols = ['IdeUsinaOutorga','NumUgUsina','MdaPotenciaUnitaria','MdaPotenciaLiberadaTeste','MdaPotenciaLiberadaComercial','NumDespachoTeste','numDespachoComercial','IdcMonitorada','DatDescidaoutorgadaRotor','DatRealizacaoSFGRotor','DatInicioOpTesteOutorgada','DatLiberacaoSFGTeste','DatUGInicioOpComerOutorgado','DatLiberOpComerRealizado','DatPrevisaoSFGComercial']\n",
+    "monitoramentoug = pd.read_parquet(os.path.join(directory,\"vmonitoramentoug.gzip\"))[cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IdeUsinaOutorga</th>\n",
+       "      <th>NumUgUsina</th>\n",
+       "      <th>MdaPotenciaUnitaria</th>\n",
+       "      <th>MdaPotenciaLiberadaTeste</th>\n",
+       "      <th>MdaPotenciaLiberadaComercial</th>\n",
+       "      <th>NumDespachoTeste</th>\n",
+       "      <th>numDespachoComercial</th>\n",
+       "      <th>IdcMonitorada</th>\n",
+       "      <th>DatDescidaoutorgadaRotor</th>\n",
+       "      <th>DatRealizacaoSFGRotor</th>\n",
+       "      <th>DatInicioOpTesteOutorgada</th>\n",
+       "      <th>DatLiberacaoSFGTeste</th>\n",
+       "      <th>DatUGInicioOpComerOutorgado</th>\n",
+       "      <th>DatLiberOpComerRealizado</th>\n",
+       "      <th>DatPrevisaoSFGComercial</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>601</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2003-09-30</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2003-10-31</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>659</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6030.0</td>\n",
+       "      <td>6030.0</td>\n",
+       "      <td>6030.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>05542017</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2005-07-15</td>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>2005-11-15</td>\n",
+       "      <td>2017-02-23</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1455</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3258.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2008-10-06</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2008-12-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2092</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>15000.0</td>\n",
+       "      <td>19252022</td>\n",
+       "      <td>28022022</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>2022-07-16</td>\n",
+       "      <td>2022-06-21</td>\n",
+       "      <td>2022-09-30</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2092</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>2080.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1948-12-15</td>\n",
+       "      <td>1949-01-01</td>\n",
+       "      <td>1948-12-15</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87590</th>\n",
+       "      <td>70558</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6666.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-04-08</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-12-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87591</th>\n",
+       "      <td>70560</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6666.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-04-08</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-12-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87592</th>\n",
+       "      <td>70560</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6666.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-04-08</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-12-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87593</th>\n",
+       "      <td>70561</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3333.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-04-08</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-12-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87594</th>\n",
+       "      <td>70561</td>\n",
+       "      <td>4</td>\n",
+       "      <td>66660.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-04-08</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2027-12-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>87595 rows × 15 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['IdeUsinaOutorga', 'CodCegFormatado', 'SigTipoGeracao', 'NomUsina',\n",
-       "       'NumUgUsina', 'MdaPotenciaUnitaria', 'MdaPotenciaLiberadaTeste',\n",
-       "       'MdaPotenciaLiberadaComercial', 'NumDespachoTeste',\n",
-       "       'numDespachoComercial', 'IdcMonitorada', 'DatDescidaoutorgadaRotor',\n",
-       "       'DatRealizacaoSFGRotor', 'DatInicioOpTesteOutorgada',\n",
-       "       'DatLiberacaoSFGTeste', 'DatUGInicioOpComerOutorgado',\n",
-       "       'DatLiberOpComerRealizado', 'DatPrevisaoSFGComercial'],\n",
-       "      dtype='object')"
+       "       IdeUsinaOutorga  NumUgUsina  MdaPotenciaUnitaria  \\\n",
+       "0                  601           2               5000.0   \n",
+       "1                  659           1               6030.0   \n",
+       "2                 1455           2               3258.0   \n",
+       "3                 2092           1              15000.0   \n",
+       "4                 2092           3               2080.0   \n",
+       "...                ...         ...                  ...   \n",
+       "87590            70558           7               6666.0   \n",
+       "87591            70560           3               6666.0   \n",
+       "87592            70560           6               6666.0   \n",
+       "87593            70561           1               3333.0   \n",
+       "87594            70561           4              66660.0   \n",
+       "\n",
+       "       MdaPotenciaLiberadaTeste  MdaPotenciaLiberadaComercial  \\\n",
+       "0                           NaN                           NaN   \n",
+       "1                        6030.0                        6030.0   \n",
+       "2                           NaN                           NaN   \n",
+       "3                       15000.0                       15000.0   \n",
+       "4                        2080.0                        2080.0   \n",
+       "...                         ...                           ...   \n",
+       "87590                       NaN                           NaN   \n",
+       "87591                       NaN                           NaN   \n",
+       "87592                       NaN                           NaN   \n",
+       "87593                       NaN                           NaN   \n",
+       "87594                       NaN                           NaN   \n",
+       "\n",
+       "      NumDespachoTeste numDespachoComercial IdcMonitorada  \\\n",
+       "0                 None                 None           Sim   \n",
+       "1                 None             05542017           Não   \n",
+       "2                 None                 None           Sim   \n",
+       "3             19252022             28022022           Não   \n",
+       "4                 None                 None           Não   \n",
+       "...                ...                  ...           ...   \n",
+       "87590             None                 None           Sim   \n",
+       "87591             None                 None           Sim   \n",
+       "87592             None                 None           Sim   \n",
+       "87593             None                 None           Sim   \n",
+       "87594             None                 None           Sim   \n",
+       "\n",
+       "      DatDescidaoutorgadaRotor DatRealizacaoSFGRotor  \\\n",
+       "0                          NaT                   NaT   \n",
+       "1                          NaT                   NaT   \n",
+       "2                          NaT                   NaT   \n",
+       "3                          NaT                   NaT   \n",
+       "4                          NaT                   NaT   \n",
+       "...                        ...                   ...   \n",
+       "87590                      NaT                   NaT   \n",
+       "87591                      NaT                   NaT   \n",
+       "87592                      NaT                   NaT   \n",
+       "87593                      NaT                   NaT   \n",
+       "87594                      NaT                   NaT   \n",
+       "\n",
+       "      DatInicioOpTesteOutorgada DatLiberacaoSFGTeste  \\\n",
+       "0                    2003-09-30                  NaT   \n",
+       "1                    2005-07-15           2017-01-05   \n",
+       "2                    2008-10-06                  NaT   \n",
+       "3                    2022-06-06           2022-07-16   \n",
+       "4                           NaT           1948-12-15   \n",
+       "...                         ...                  ...   \n",
+       "87590                       NaT                  NaT   \n",
+       "87591                       NaT                  NaT   \n",
+       "87592                       NaT                  NaT   \n",
+       "87593                       NaT                  NaT   \n",
+       "87594                       NaT                  NaT   \n",
+       "\n",
+       "      DatUGInicioOpComerOutorgado DatLiberOpComerRealizado  \\\n",
+       "0                      2003-10-31                      NaT   \n",
+       "1                      2005-11-15               2017-02-23   \n",
+       "2                      2008-12-01                      NaT   \n",
+       "3                      2022-06-21               2022-09-30   \n",
+       "4                      1949-01-01               1948-12-15   \n",
+       "...                           ...                      ...   \n",
+       "87590                  2027-04-08                      NaT   \n",
+       "87591                  2027-04-08                      NaT   \n",
+       "87592                  2027-04-08                      NaT   \n",
+       "87593                  2027-04-08                      NaT   \n",
+       "87594                  2027-04-08                      NaT   \n",
+       "\n",
+       "      DatPrevisaoSFGComercial  \n",
+       "0                         NaT  \n",
+       "1                         NaT  \n",
+       "2                         NaT  \n",
+       "3                         NaT  \n",
+       "4                         NaT  \n",
+       "...                       ...  \n",
+       "87590              2027-12-15  \n",
+       "87591              2027-12-15  \n",
+       "87592              2027-12-15  \n",
+       "87593              2027-12-15  \n",
+       "87594              2027-12-15  \n",
+       "\n",
+       "[87595 rows x 15 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "monitoramento_ug.columns"
+    "monitoramentoug"
    ]
   }
  ],
@@ -171,7 +496,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "480ca3e66d53f790d71f23a4e6fd5a0fb225c2e8e74302bbec1a2934ab7c2802"
+    "hash": "ff5ab5aeef423a334f99560c66ad68010afa0cd01c099fa68524cb04a5f985d0"
    }
   }
  },
