--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -121,9 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rename_cols = {\n",
-    "    'DatPrevistaComercial' : 'DatPrevistaComercial1'\n",
-    "}\n",
     "cols = ['DthEnvio','IdeUsinaOutorga','CodCeg','NomUsina','SigTipoGeracao','DscObservacao','VlrPotenciaUnitaria','NumOperacaoUg','DatPrevistaComercial','DatPrevistaRotor','DatPrevistaMaximaRotor','DatRealizacaoRotor','DatPrevistaTeste','DatPrevistaMaximaTeste','DatRealizacaoTeste','DatPrevistaComercial','DatPrevistaMaximaComercial','DatRealizacaoComercial','SigTipoGeracao','NomUsina']\n",
     "ugrapeel  = pd.read_parquet(os.path.join(directory,\"vrapeeloperacaoug.gzip\"))[cols].drop_duplicates().rename(columns=rename_cols)"
    ]
@@ -1371,12 +1368,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "480ca3e66d53f790d71f23a4e6fd5a0fb225c2e8e74302bbec1a2934ab7c2802"
+    "hash": "ff5ab5aeef423a334f99560c66ad68010afa0cd01c099fa68524cb04a5f985d0"
    }
   }
  },
