--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -62,6 +62,26 @@
    "source": [
     "get_standard_file_name([\"vmonitoramentoleilao\",\"vmonitoramentoug\" ,\"vmonitoramentousina\"],log)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2023_01_29_00_00'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hoje.strftime(\"%Y_%m_%d_%H_%M\")"
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
