--- a/App/teste.ipynb
+++ b/App/teste.ipynb
@@ -1,35 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from utils import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\viniciusbarros\\AppData\\Local\\Continuum\\anaconda3\\envs\\Aneel\\lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "prepara_crpnograma_sas = pd.read_excel(\"./WORK_Prepara_Cronograma.xlsx\")\n",
-    "save_pickle(prepara_crpnograma_sas,'./prepara_crpnograma_sas.pickle')"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Aneel",
@@ -46,12 +16,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 | packaged by conda-forge | (main, Mar 30 2022, 08:38:02) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "480ca3e66d53f790d71f23a4e6fd5a0fb225c2e8e74302bbec1a2934ab7c2802"
+    "hash": "ff5ab5aeef423a334f99560c66ad68010afa0cd01c099fa68524cb04a5f985d0"
    }
   }
  },
