--- a/App/ipynb_2_py.ipynb
+++ b/App/ipynb_2_py.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os,sys\n",
-    "import pandas as pd\n",
-    "from pyperclip import copy\n",
+    "### start_imports ###\n",
+    "import os\n",
     "import re\n",
-    "import unicodedata as uc"
+    "import json\n",
+    "from utils import *\n",
+    "### end_imports ###\n",
+    "from pyperclip import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
+    "### start_miscellaneous ###\n",
     "def read_ipynb(input_ipynb_file):\n",
     "    # Check if the input file is a Jupyter Notebook\n",
     "    \n",
@@ -39,154 +40,128 @@
     "        text+= \"\\n\"\n",
     "\n",
     "    return text\n",
-    "def ipynb_2_py(input_ipynb_file):\n",
-    "    text = read_ipynb(input_ipynb_file)\n",
-    "    text = re.sub(r'display.*\\n',\"\",text,re.MULTILINE)\n",
-    "\n",
-    "    imports = re.search(r\"### start_imports ###\\n(.*)### end_imports ###\",\n",
-    "                        text, re.MULTILINE | re.DOTALL|re.UNICODE).group(1)\n",
-    "\n",
-    "    functions = re.findall(r\"#### start_function ###(.*?)### end_function ###\",\n",
-    "                        text, re.MULTILINE | re.DOTALL)\n",
-    "\n",
-    "    functions = re.findall(r\"#### start_function ###(.*?)### end_function ###\",\n",
-    "                        text, re.MULTILINE | re.DOTALL)\n",
-    "    funcoes = \"\"\n",
-    "    for function in reversed(functions):\n",
-    "        function_vars = re.search(r\"### start_function_vars ###\\n(.*)### end_function_vars ###\",\n",
-    "                            function, re.MULTILINE | re.DOTALL).group(1)\n",
-    "\n",
-    "        dummy = \"\"\n",
-    "\n",
-    "        try:\n",
-    "            function_defined_vars = re.search(r\"### start_funcion_defined_vars ###\\n(.*)\\n### end_funcion_defined_vars ###\",\n",
-    "                                function, re.MULTILINE | re.DOTALL).group(1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "            for line in function_defined_vars.split(\"\\n\"):\n",
-    "                var,value = line.replace(\" \",'').split(\"=\")\n",
-    "                dummy += f\"{var} = {value}, \"\n",
-    "        except AttributeError:\n",
-    "            pass\n",
-    "        function_defined_vars = dummy\n",
-    "\n",
-    "        dummy = \"\"\n",
-    "        try:\n",
-    "            function_vars = re.search(r\"### end_funcion_defined_vars ###\\n(.*)\\n### end_function_vars ###\",\n",
-    "                                function, re.MULTILINE | re.DOTALL).group(1)\n",
-    "\n",
-    "\n",
-    "            for line in function_vars.split(\"\\n\"):\n",
-    "                var,*value = line.replace(\" \",'').split(\"=\")\n",
-    "                dummy += f\"{var}, \"\n",
-    "        except AttributeError:\n",
-    "            pass\n",
-    "        function_vars = dummy\n",
-    "        function_arg = function_vars +  function_defined_vars\n",
-    "        function_name,code = re.findall(r\"function_name = (.*?)\\n.*### start_code ###\\n(.*)\",\n",
-    "                            function, re.MULTILINE | re.DOTALL)[0]\n",
-    "\n",
-    "        code = re.sub(r\"\\\"\\\"\\\" ### include_on_script\\n(.*)\\\"\\\"\\\"\", \"\\\\1\", code, 0, re.MULTILINE | re.DOTALL)\n",
-    "        dummy = \"\"\n",
-    "        for line in code.split(\"\\n\"):\n",
-    "            dummy += \" \"*4 + line + '\\n'\n",
-    "        code = dummy\n",
-    "        text = f\"{function_name}({function_arg}):\\n{dummy}\"\n",
-    "        funcoes += text + \"\\n\"\n",
-    "    return f\"{imports} \\n {funcoes}\""
+    "### end_miscellaneous ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texto = ipynb_2_py(\"./Previsor_teste3.ipynb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 556,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "copy(texto)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'group'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[550], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ipynb_2_py(\u001b[39m\"\u001b[39;49m\u001b[39m./main.ipynb\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[543], line 16\u001b[0m, in \u001b[0;36mipynb_2_py\u001b[1;34m(input_ipynb_file)\u001b[0m\n\u001b[0;32m     12\u001b[0m funcoes \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[39mfor\u001b[39;00m function \u001b[39min\u001b[39;00m \u001b[39mreversed\u001b[39m(functions):\n\u001b[0;32m     15\u001b[0m     function_vars \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msearch(\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m### start_function_vars ###\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mn(.*)### end_function_vars ###\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m---> 16\u001b[0m                         function, re\u001b[39m.\u001b[39;49mMULTILINE \u001b[39m|\u001b[39;49m re\u001b[39m.\u001b[39;49mDOTALL)\u001b[39m.\u001b[39;49mgroup(\u001b[39m1\u001b[39m)\n\u001b[0;32m     18\u001b[0m     dummy \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     20\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo sobrescrito\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 545,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "functions = re.findall(r\"#### start_function ###(.*?)### end_function ###\",\n",
+    "#### start_function ### function_name = ipynb_2_py\n",
+    "### start_function_vars ###\n",
+    "### start_funcion_defined_vars ###\n",
+    "save_file_name = './BIU.py'\n",
+    "### end_funcion_defined_vars ###\n",
+    "text_file_name  = \"./Previsor_teste3.ipynb\"\n",
+    "### end_function_vars ###\n",
+    "\n",
+    "\n",
+    "\n",
+    "if not save_file_name:\n",
+    "    dir,file = os.path.split(os.path.abspath(text_file_name))\n",
+    "    file = file.split(\".\")[0]\n",
+    "    save_file_name = os.path.join(dir,f\"{file}.py\")\n",
+    "\n",
+    "text = read_ipynb(text_file_name)\n",
+    "\n",
+    "text = re.sub(r\" *\\n\", '\\\\n', text, 0, re.MULTILINE)\n",
+    "text = re.sub(r\" {2,}\", ' ', text, 0, re.MULTILINE)\n",
+    "\n",
+    "text = re.sub(r\"display.*\", '', text, 0, re.MULTILINE)\n",
+    "text = re.sub(r\"\\\"\\\"\\\" ### include_on_script ###\\n(.*?)\\\"\\\"\\\"\", \"\\\\1\", text, 0, re.MULTILINE | re.DOTALL)\n",
+    "\n",
+    "\n",
+    "\n",
+    "functions = re.findall(r\"#### start_function ###(.*?)\\n### end_function ###\",\n",
     "                    text, re.MULTILINE | re.DOTALL)\n",
     "\n",
-    "for function in reversed(functions):\n",
-    "    pass\n",
-    "imports = re.search(r\"### start_imports ###\\n(.*)### end_imports ###\",\n",
-    "                    text, re.MULTILINE | re.DOTALL|re.UNICODE).group(1)\n",
-    "function_vars = re.search(r\"### start_function_vars ###\\n(.*)### end_function_vars ###\",\n",
-    "                    function, re.MULTILINE | re.DOTALL).group(1)\n",
-    "dummy = \"\"\n",
+    "imports = re.search(r\"### start_imports ###\\n(.*)\\n### end_imports ###\",\n",
+    "                        text, re.MULTILINE | re.DOTALL|re.UNICODE).group(1)\n",
     "\n",
-    "try:\n",
-    "    function_defined_vars = re.search(r\"### start_funcion_defined_vars ###\\n(.*)\\n### end_funcion_defined_vars ###\",\n",
+    "miscellaneous = re.search(r\"### start_miscellaneous ###\\n(.*)\\n### end_miscellaneous ###\",\n",
+    "                        text, re.MULTILINE | re.DOTALL|re.UNICODE).group(1)\n",
+    "\n",
+    "py_code = f\"{imports}\\n\\n{miscellaneous}\\n\\n\"\n",
+    "functions_code = {}\n",
+    "\n",
+    "test_function = \"\"\n",
+    "\n",
+    "for function in functions:\n",
+    "\n",
+    "    function_vars_block = re.search(r\"### start_function_vars ###\\n(.*)\\n### end_function_vars ###\",\n",
     "                        function, re.MULTILINE | re.DOTALL).group(1)\n",
+    "    dummy = \"\"\n",
+    "\n",
+    "    try:\n",
+    "        function_defined_vars_code = re.search(r\"### start_funcion_defined_vars ###\\n(.*)\\n### end_funcion_defined_vars ###\",\n",
+    "                            function, re.MULTILINE | re.DOTALL).group(1)\n",
     "\n",
     "\n",
     "\n",
-    "    for line in function_defined_vars.split(\"\\n\"):\n",
-    "        var,value = line.replace(\" \",'').split(\"=\")\n",
-    "        dummy += f\"{var} = {value}, \"\n",
-    "except AttributeError:\n",
-    "    pass\n",
-    "function_defined_vars = dummy\n",
+    "        for line in function_defined_vars_code.split(\"\\n\"):\n",
+    "            if line:\n",
+    "                var,value = line.replace(\" \",'').split(\"=\")\n",
+    "                dummy += f\"{var} = {value}, \"\n",
+    "    except AttributeError:\n",
+    "        pass\n",
+    "    function_defined_vars = dummy\n",
     "\n",
-    "dummy = \"\"\n",
-    "try:\n",
-    "    function_vars = re.search(r\"### end_funcion_defined_vars ###\\n(.*)\\n### end_function_vars ###\",\n",
-    "                        function, re.MULTILINE | re.DOTALL).group(1)\n",
+    "    dummy = \"\"\n",
+    "    try:\n",
+    "        function_vars_code = re.search(r\"### end_funcion_defined_vars ###\\n(.*)\\n### end_function_vars ###\",\n",
+    "                            function, re.MULTILINE | re.DOTALL).group(1)\n",
     "\n",
     "\n",
-    "    for line in function_vars.split(\"\\n\"):\n",
-    "        var,*value = line.replace(\" \",'').split(\"=\")\n",
-    "        dummy += f\"{var}, \"\n",
-    "except AttributeError:\n",
-    "    pass\n",
-    "function_vars = dummy\n",
-    "function_arg = function_vars +  function_defined_vars\n",
-    "function_name,code = re.findall(r\"function_name = (.*?)\\n.*### start_code ###\\n(.*)\",\n",
-    "                    function, re.MULTILINE | re.DOTALL)[0]\n",
+    "        for line in function_vars_code.split(\"\\n\"):\n",
+    "            if line:\n",
+    "                var,*value = line.replace(\" \",'').split(\"=\")\n",
+    "                dummy += f\"{var}, \"\n",
+    "    except AttributeError:\n",
+    "        pass\n",
+    "    function_vars = dummy\n",
+    "    function_arg = function_vars +  function_defined_vars\n",
+    "    function_name,code = re.findall(r\"function_name = (.*?)\\n.*### end_function_vars ###\\n(.*)\",\n",
+    "                        function, re.MULTILINE | re.DOTALL)[0]\n",
     "\n",
-    "code = re.sub(r\"\\\"\\\"\\\" ### include_on_script\\n(.*)\\\"\\\"\\\"\", \"\\\\1\", code, 0, re.MULTILINE | re.DOTALL)\n",
-    "dummy = \"\"\n",
-    "for line in code.split(\"\\n\"):\n",
-    "    dummy += \" \"*4 + line + '\\n'\n",
-    "code = dummy\n",
-    "text = f\"{function_name}({function_arg}):\\n{dummy}\""
+    "    #code = re.sub(r\"\\\"\\\"\\\" ### include_on_script ###\\n(.*)\\\"\\\"\\\"\", \"\\\\1\", code, 0, re.MULTILINE | re.DOTALL)\n",
+    "    dummy = \"\"\n",
+    "    for line in code.split(\"\\n\"):\n",
+    "        dummy += \" \"*4 + line + '\\n'\n",
+    "    code = dummy\n",
+    "    function_code = f\"### start {function_name} ###\\ndef {function_name}({function_arg}):\\n{dummy}### end {function_name} ###\\n\"\n",
+    "    functions_code[function_name] = function_code\n",
+    "    py_code+= function_code\n",
+    "    test_function += (re.findall(r\"### start_funcion_defined_vars ###\\n(.*)### end_funcion_defined_vars ###\",function,re.MULTILINE | re.DOTALL)[0] + \n",
+    "            re.findall(r\"### end_funcion_defined_vars ###\\n(.*)### end_function_vars ###\",function,re.MULTILINE | re.DOTALL)[0] + \"\\n\" +\n",
+    "            f\"{function_name}({function_arg})\")\n",
+    "\n",
+    "\n",
+    "py_code+= \"\\nif __name__ == '__main__':\\n\"\n",
+    "for line in test_function.split(\"\\n\"):\n",
+    "    py_code += \" \"*4 + line + \"\\n\"\n",
+    "\n",
+    "if not os.path.exists(save_file_name):\n",
+    "    print(\"arquivo criado...\")\n",
+    "    write_file(py_code,save_file_name)\n",
+    "else:\n",
+    "    existing_file = read_file(save_file_name)\n",
+    "    for function_name in functions_code:\n",
+    "        if len(re.findall(rf\"### start {function_name} ###\\n.*### end {function_name} ###\", existing_file,re.MULTILINE | re.DOTALL)) != 1:\n",
+    "            raise\n",
+    "        existing_file = re.sub(f\"### start {function_name} ###\\n.*### end {function_name} ###\", fr\"{functions_code[function_name]}\",existing_file,0, re.MULTILINE | re.DOTALL)\n",
+    "    print(\"Arquivo sobrescrito\")\n",
+    "    write_file(existing_file,save_file_name)   \n",
+    "### end_function ###"
    ]
   }
  ],
